--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "multer": "*"
   }
 }
