--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 DB_URI=mongodb+srv://Aniket:Ani97ket@shoes.rhqahbo.mongodb.net/?retryWrites=true&w=majority
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
